<resources>
    <string name="app_name">Menu Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">Sign-In</string>
    <string name="txemail">Ini Hasil Email</string>
    <string name="txpassword">Ini hasil Password</string>
    <string name="label12">Login Berhasil</string>
    <string name="var1">ini pesan</string>
    <string name="tData">Data Anda</string>
    <string name="mDaftar">Pendaftaran</string>
    <string name="ldaftar">Login Berhasil</string>
    <string name="enama">Masukan Nama</string>
    <string name="eemail">Masukan Email</string>
    <string name="epass">Masukan Password</string>
    <string name="erepass">Masukan Password Kembali</string>
    <string name="ealamat">Masukan Alamat</string>
    <string name="txdaftar">Daftar</string>
    <string name="lihatdata">LihatData</string>
    <string name="editdata">Edit Data</string>
    <string name="datakontak">Data Kotntak</string>
    <string name="namaitem">Nama Item</string>
    <string name="detailkontak">Detail Kontak</string>
    <string name="nama">Nama</string>
    <string name="notel">Nomor Telpon</string>

</resources>