<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txdaftar"
        android:textSize="15pt"
        tools:layout_editor_absoluteX="157dp"
        tools:layout_editor_absoluteY="158dp" />

    <EditText
        android:id="@+id/edNama"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"

        app:layout_constraintVertical_bias="0.169"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enama"
        android:inputType="textPersonName"
        android:textSize="9pt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="233dp" />

    <EditText
        android:id="@+id/edAlamat"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNama"
        app:layout_constraintVertical_bias="0.067"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/ealamat"
        android:inputType="textMultiLine|text"
        android:textSize="9pt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="284dp" />

    <EditText
        android:id="@+id/EdEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edAlamat"

        app:layout_constraintVertical_bias="0.072"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/eemail"
        android:inputType="textEmailAddress"
        android:textSize="9pt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="339dp" />

    <EditText
        android:id="@+id/edPass"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EdEmail"

        app:layout_constraintVertical_bias="0.08"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/epass"
        android:inputType="textPassword"
        android:textSize="9pt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="399dp" />

    <EditText
        android:id="@+id/edrepas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPass"
        app:layout_constraintVertical_bias="0.113"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/erepass"
        android:inputType="textPassword"
        android:textSize="9pt"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="460dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabSimpan"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.895"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edrepas"
        app:layout_constraintVertical_bias="0.486"
        app:srcCompat="@drawable/floppy-512
        android:layout_width="
        android:layout_width="67dp"
        android:layout_height="65dp"
        tools:layout_editor_absoluteX="319dp"
        tools:layout_editor_absoluteY="650dp" />87dp"
        android:layout_height="52dp"
        android:clickable="true"
        tools:layout_editor_absoluteX="162dp"
        tools:layout_editor_absoluteY="531dp" />

</androidx.constraintlayout.widget.ConstraintLayout>